# terminal-workspace

./: .env.example  .env.shared  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURE_PARITY.md  INITIAL_MEGA_PROMPT.md  NOTICE  README.md  SECURITY.md  ai.config.json  bootstrap.sh  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.agent/: rules.md
.gemini/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: claude.md  codex.md  reviewer.md
ai/: acceptance.md  bootstrap.md  plan.md  tasks.md
docs/: architecture.md  development.md  onboarding.md  operations.md  parity-and-hardening-plan.md  parity-and-hardening-review.md  release.md  security.md  testing.md  ui-parity-notes.md  user.md  validation-log.md
prompts/: claude_launcher.txt  codex_launcher.txt  deploy.md  lean.md  mega.md  review_launcher.txt
scripts/: dev.sh  effort-guard.sh  generate-tauri-icons.sh  github-release-secrets.mjs  lint.sh  load-env.sh  local-ssh-test-setup.sh  native-build.sh  native-bundle.sh  native-check.sh  native-dmg.sh  native-fixture-preflight.sh  native-key-tooling-test.sh  native-notarize.sh  native-notary-auth-test.sh  native-promote.sh  native-publish-release.sh  native-release-annotate.mjs  native-release-check.sh  native-release-manifest.mjs  parity-report.sh  (+5 more)
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain_support.rs  main.rs  native_transport.rs  native_transport_fixtures.rs
(+358 files in other folders)
