[package]
name = "terminal-workspace"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = "0.3"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
