[package]
name = "terminal-workspace"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tokio = { version = "1", features = ["macros", "sync"] }
